Add activities APIs
