# model_paginated_response_selectable_resource_type_v3.go
@@ -1,0 +1,142 @@
+/*
+Apono
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package apono
+
+import (
+	"encoding/json"
+)
+
+// checks if the PaginatedResponseSelectableResourceTypeV3 type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &PaginatedResponseSelectableResourceTypeV3{}
+
+// PaginatedResponseSelectableResourceTypeV3 struct for PaginatedResponseSelectableResourceTypeV3
+type PaginatedResponseSelectableResourceTypeV3 struct {
+	Data       []SelectableResourceType `json:"data"`
+	Pagination PaginationInfo           `json:"pagination"`
+}
+
+// NewPaginatedResponseSelectableResourceTypeV3 instantiates a new PaginatedResponseSelectableResourceTypeV3 object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewPaginatedResponseSelectableResourceTypeV3(data []SelectableResourceType, pagination PaginationInfo) *PaginatedResponseSelectableResourceTypeV3 {
+	this := PaginatedResponseSelectableResourceTypeV3{}
+	this.Data = data
+	this.Pagination = pagination
+	return &this
+}
+
+// NewPaginatedResponseSelectableResourceTypeV3WithDefaults instantiates a new PaginatedResponseSelectableResourceTypeV3 object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewPaginatedResponseSelectableResourceTypeV3WithDefaults() *PaginatedResponseSelectableResourceTypeV3 {
+	this := PaginatedResponseSelectableResourceTypeV3{}
+	return &this
+}
+
+// GetData returns the Data field value
+func (o *PaginatedResponseSelectableResourceTypeV3) GetData() []SelectableResourceType {
+	if o == nil {
+		var ret []SelectableResourceType
+		return ret
+	}
+
+	return o.Data
+}
+
+// GetDataOk returns a tuple with the Data field value
+// and a boolean to check if the value has been set.
+func (o *PaginatedResponseSelectableResourceTypeV3) GetDataOk() ([]SelectableResourceType, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Data, true
+}
+
+// SetData sets field value
+func (o *PaginatedResponseSelectableResourceTypeV3) SetData(v []SelectableResourceType) {
+	o.Data = v
+}
+
+// GetPagination returns the Pagination field value
+func (o *PaginatedResponseSelectableResourceTypeV3) GetPagination() PaginationInfo {
+	if o == nil {
+		var ret PaginationInfo
+		return ret
+	}
+
+	return o.Pagination
+}
+
+// GetPaginationOk returns a tuple with the Pagination field value
+// and a boolean to check if the value has been set.
+func (o *PaginatedResponseSelectableResourceTypeV3) GetPaginationOk() (*PaginationInfo, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Pagination, true
+}
+
+// SetPagination sets field value
+func (o *PaginatedResponseSelectableResourceTypeV3) SetPagination(v PaginationInfo) {
+	o.Pagination = v
+}
+
+func (o PaginatedResponseSelectableResourceTypeV3) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o PaginatedResponseSelectableResourceTypeV3) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["data"] = o.Data
+	toSerialize["pagination"] = o.Pagination
+	return toSerialize, nil
+}
+
+type NullablePaginatedResponseSelectableResourceTypeV3 struct {
+	value *PaginatedResponseSelectableResourceTypeV3
+	isSet bool
+}
+
+func (v NullablePaginatedResponseSelectableResourceTypeV3) Get() *PaginatedResponseSelectableResourceTypeV3 {
+	return v.value
+}
+
+func (v *NullablePaginatedResponseSelectableResourceTypeV3) Set(val *PaginatedResponseSelectableResourceTypeV3) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullablePaginatedResponseSelectableResourceTypeV3) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullablePaginatedResponseSelectableResourceTypeV3) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullablePaginatedResponseSelectableResourceTypeV3(val *PaginatedResponseSelectableResourceTypeV3) *NullablePaginatedResponseSelectableResourceTypeV3 {
+	return &NullablePaginatedResponseSelectableResourceTypeV3{value: val, isSet: true}
+}
+
+func (v NullablePaginatedResponseSelectableResourceTypeV3) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullablePaginatedResponseSelectableResourceTypeV3) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
