# model_selectable_resource_type.go
@@ -1,0 +1,142 @@
+/*
+Apono
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package apono
+
+import (
+	"encoding/json"
+)
+
+// checks if the SelectableResourceType type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &SelectableResourceType{}
+
+// SelectableResourceType struct for SelectableResourceType
+type SelectableResourceType struct {
+	Id   string `json:"id"`
+	Name string `json:"name"`
+}
+
+// NewSelectableResourceType instantiates a new SelectableResourceType object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewSelectableResourceType(id string, name string) *SelectableResourceType {
+	this := SelectableResourceType{}
+	this.Id = id
+	this.Name = name
+	return &this
+}
+
+// NewSelectableResourceTypeWithDefaults instantiates a new SelectableResourceType object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewSelectableResourceTypeWithDefaults() *SelectableResourceType {
+	this := SelectableResourceType{}
+	return &this
+}
+
+// GetId returns the Id field value
+func (o *SelectableResourceType) GetId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Id
+}
+
+// GetIdOk returns a tuple with the Id field value
+// and a boolean to check if the value has been set.
+func (o *SelectableResourceType) GetIdOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Id, true
+}
+
+// SetId sets field value
+func (o *SelectableResourceType) SetId(v string) {
+	o.Id = v
+}
+
+// GetName returns the Name field value
+func (o *SelectableResourceType) GetName() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value
+// and a boolean to check if the value has been set.
+func (o *SelectableResourceType) GetNameOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Name, true
+}
+
+// SetName sets field value
+func (o *SelectableResourceType) SetName(v string) {
+	o.Name = v
+}
+
+func (o SelectableResourceType) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o SelectableResourceType) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["id"] = o.Id
+	toSerialize["name"] = o.Name
+	return toSerialize, nil
+}
+
+type NullableSelectableResourceType struct {
+	value *SelectableResourceType
+	isSet bool
+}
+
+func (v NullableSelectableResourceType) Get() *SelectableResourceType {
+	return v.value
+}
+
+func (v *NullableSelectableResourceType) Set(val *SelectableResourceType) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableSelectableResourceType) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableSelectableResourceType) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableSelectableResourceType(val *SelectableResourceType) *NullableSelectableResourceType {
+	return &NullableSelectableResourceType{value: val, isSet: true}
+}
+
+func (v NullableSelectableResourceType) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableSelectableResourceType) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
